updated img path in the client component

--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -11,7 +11,7 @@
 
                 <!-- Client logo -->
                 <div class="mb-6 lg:mb-0">
-                    <img src="./assets/Logo1_without_bg (1).webp" class="w-20 h-20" alt="Client Logo" />
+                    <img src="src/assets/artoviaLogo.webp" class="w-20 h-20" alt="Client Logo" />
                 </div>
 
                 <!-- Client info -->
