(fleat): added improvments for accessability fort the all HTML components

--- a/src/app/components/clients/clients.component.html
+++ b/src/app/components/clients/clients.component.html
@@ -1,27 +1,27 @@
 <div class="container mt-64 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
-    <section class="w-full">
+    <section class="w-full" aria-labelledby="clients">
         <h2 id="clients" class="secondary-title">Clients</h2>
-        <p class="section-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste.
-        </p>
+        <p class="section-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat, iste.</p>
+        
         <!-- Clients -->
         <div class="space-y-12 my-16">
-            <div
-                class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap">
+            <article class="w-full border border-nav p-16 lg:px-32 lg:py-20 lg:space-x-32 flex justify-center lg:justify-start flex-wrap lg:flex-nowrap">
                 <!-- Client logo -->
-                <div class="mb-6 lg:mb-0">
-                    <img src="assets/artoviaLogo.webp" class="w-20 h-20" alt="Client Logo" />
-                </div>
+                <figure class="mb-6 lg:mb-0">
+                    <img src="assets/artoviaLogo.webp" class="w-20 h-20" alt="Artovia Technical Services Logo">
+                    <figcaption class="sr-only">Artovia Technical Services</figcaption>
+                </figure>
+                
                 <!-- Client info -->
                 <div class="flex flex-wrap justify-center text-center lg:text-left lg:block">
                     <h3 class="text-white text-3xl font-semibold">Artovia Technical Services L.L.C</h3>
-
+                    
                     <div class="w-full lg:w-auto flex flex-wrap justify-center lg:justify-start gap-3 mt-6 mb-8">
-                        <div class="badge">Front-End development</div>
-                        <div class="badge">2025</div>
+                        <div class="badge" role="status">Front-End development</div>
+                        <div class="badge" role="status">2025</div>
                     </div>
-
                 </div>
-            </div>
+            </article>
         </div>
     </section>
 </div>
