--- a/src/app/components/work/work.component.html
+++ b/src/app/components/work/work.component.html
@@ -1,15 +1,19 @@
 <div class="container mt-32 flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
     <section class="w-full">
         <h2 id="work" class="secondary-title">My Work</h2>
-        <p class="section-paragraph">I’ve had working and implementing frontend code of these projects below.</p>
-        
-        <div class="projects grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6 ">
-            <a class="transform  transition duration-500 hover:scale-105 hover:animate-colorPulse " *ngFor="let project of projects" [href]="project.url" target="_blank" >
+        <p class="section-paragraph">
+            I’ve had working and implementing frontend code of these projects below.
+        </p>
+
+        <div class="projects grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-6">
+            <a class="transform transition duration-500 hover:scale-105 hover:animate-colorPulse"
+                *ngFor="let project of projects" [href]="project.url" target="_blank" rel="noopener noreferrer"
+                [attr.aria-label]="'View project: ' + project.name">
                 <img loading="lazy" [alt]="project.name" [src]="project.image"
-                    class="w-full bg-nav h-72 lg:h-72 object-cover ">
-                    <div class="cardText">
-                        <h3 class="text-1xl font-extralight text-center mt-2">{{ project.name }}</h3>
-                    </div>
+                    class="w-full bg-nav h-72 lg:h-72 object-cover">
+                <div class="cardText">
+                    <h3 class="text-1xl font-extralight text-center mt-2">{{ project.name }}</h3>
+                </div>
             </a>
         </div>
     </section>
