(feat):added border in the bottom of the navbar

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="py-6 fixed top-0 w-full bg-body z-50" role="navigation">
+<header class="py-6 fixed top-0 w-full bg-body z-50 border-b border-nav " role="navigation">
     <div class="container flex justify-between items-center mx-auto px-8 md:px-14 lg:px-24 w-full">
         <div class="text-lg font-bold cursor-pointer animate-colorPulse" (click)="scrollTo('hero')"
             aria-label="Go to Home section">Mohamed.Samy</div>
